force-app/main/default/objects/Experience_API_Integration_Settings__c/Experience_API_Integration_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Experience API Integration Settings</label>
</CustomObject>