force-app/main/default/objects/Experience_API_Integration_Settings__c/fields/Account_Refresh_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Account_Refresh_Endpoint__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Account Refresh Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>