force-app/main/default/objects/Experience_API_Integration_Settings__c/fields/Authorization_Token_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Authorization_Token_Endpoint__c</fullName>
    <description>Url for endpoint to get authorization token.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Authorization Token Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>