force-app/main/default/objects/Experience_API_Integration_Settings__c/fields/Base_URL__c.field-meta.xml
<CustomField>
    <fullName>Base_URL__c</fullName>
    <description>Base URL of Environment</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Base URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>