force-app/main/default/objects/Experience_API_Integration_Settings__c/fields/Customer_Communications_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Customer_Communications_Endpoint__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer Communications Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>