force-app/main/default/objects/Experience_API_Integration_Settings__c/fields/Hash_Secret__c.field-meta.xml
<CustomField>
    <fullName>Hash_Secret__c</fullName>
    <description>The secret used to generate the HMAC Authorization.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Hash Secret</label>
    <length>100</length>
    <type>Text</type>
</CustomField>