force-app/main/default/objects/Experience_API_Integration_Settings__c/fields/Link_to_FI_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Link_to_FI_Endpoint__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Link to FI Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>