force-app/main/default/objects/Experience_API_Integration_Settings__c/fields/OB_Get_User_Details_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>OB_Get_User_Details_Endpoint__c</fullName>
    <description>Retrieves Online Banking User Details by customer token.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>OB Get User Details Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>