force-app/main/default/objects/Experience_API_Integration_Settings__c/fields/OB_Reset_MFA_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>OB_Reset_MFA_Endpoint__c</fullName>
    <description>Online Banking Reset Two Factor Authentication Endpoint by Okta guid.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>OB Reset MFA Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>