force-app/main/default/objects/Experience_API_Integration_Settings__c/fields/OB_Reset_Password_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>OB_Reset_Password_Endpoint__c</fullName>
    <description>Online Banking Reset One Time Password Endpoint</description>
    <encryptionScheme>None</encryptionScheme>
    <label>OB Reset Password Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>