force-app/main/default/objects/Experience_API_Integration_Settings__c/fields/Pindrop_Feedback_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Pindrop_Feedback_Endpoint__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Pindrop Feedback Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>