force-app/main/default/objects/Experience_API_Integration_Settings__c/fields/Pindrop_Get_Risk_Color_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Pindrop_Get_Risk_Color_Endpoint__c</fullName>
    <description>Gets the Risk Color of an active phone call.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Pindrop Get Risk Color Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>