force-app/main/default/objects/Experience_API_Integration_Settings__c/fields/Token_Authorization__c.field-meta.xml
<CustomField>
    <fullName>Token_Authorization__c</fullName>
    <description>Encoded value of authentication information for Experience API to get authorization token.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Token Authorization</label>
    <length>100</length>
    <type>Text</type>
</CustomField>