force-app/main/default/objects/Experience_API_Integration_Settings__c/fields/Token_Vault_Get_Account_Number_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Token_Vault_Get_Account_Number_Endpoint__c</fullName>
    <description>Get an account number by account number token endpoint.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Token Vault Get Account Number Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>