force-app/main/default/objects/Experience_API_Integration_Settings__c/fields/Transactions_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Transactions_Endpoint__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Transactions Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>